# aoc

./: .gitignore  Cargo.toml  callgrind.out.187221  criterion.toml  shell.nix
benches/: aoc2021.rs
nix/: sources.json
src/: lib.rs  util.rs
src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  util.rs
src/aoc2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
