[package]
name = "aoc"
version = "0.1.0"
authors = ["The Author <the.author@example.com>"]
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"

[profile.release]
debug = 1

[[bin]]
name = "aoc"
path = "src/bin/main.rs"

[dependencies]
ahash = "0.7.6"
pathfinding = "3.0.5"
nom = "7.1.0"
typenum = "1.14.0"
hex = "0.4.3"
num = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2021"
harness = false
